[tool.poetry]
name = "purrformance-api"
version = "0.1.0"
description = ""
authors = ["4rkh4m"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
motor = "^3.5.1"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
bandit = "^1.7.9"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
